--- a/common.css
+++ b/common.css
@@ -1,5 +1,5 @@
 .navbar {
-	position: fixed;
+	position: absolute;
 	top: 0;
 	width: 100%;
 	background-color: transparent;
